<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_round_corners_background"
    tools:context=".fragments.TweetDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:background="@drawable/white_round_corners_background">

        <Button
            android:id="@+id/Reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tweet_reply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reply" />

        <ImageView
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/twitter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <Button
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet_star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.929"
            app:layout_constraintStart_toEndOf="@+id/Reply"
            app:layout_constraintTop_toTopOf="@+id/Reply" />

        <Button
            android:id="@+id/retweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="@string/tweet_retweet"
            app:layout_constraintEnd_toStartOf="@+id/star"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toEndOf="@+id/Reply"
            app:layout_constraintTop_toTopOf="@+id/Reply" />

        <TextView
            android:id="@+id/tweetListitemTweet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tweet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reply"
            app:layout_constraintTop_toBottomOf="@+id/tweetListitemName" />

        <TextView
            android:id="@+id/tweetListitemHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/alias"
            app:layout_constraintStart_toEndOf="@+id/tweetListitemName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tweetListitemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            app:layout_constraintStart_toEndOf="@+id/reply"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>